--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.0",
     "react": "^16.12.0",
+    "antd": "^4.2.4",
+    "antd-mobile": "^2.3.3",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0",
     "react-redux": "^7.1.3",
