--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.19.0",
-    "react": "^16.12.0",
+    "@uploadcare/react-widget": "^1.0.0",
     "antd": "^4.2.4",
     "antd-mobile": "^2.3.3",
+    "axios": "^0.19.0",
+    "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.4.0",
     "react-redux": "^7.1.3",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
+    "react-scripts": "^3.4.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "uploadcare": "^0.4.5",
+    "uploadcare-widget": "^3.7.5",
+    "uploadcare-widget-tab-effects": "^1.4.7",
     "yarn": "^1.16.0"
   },
   "scripts": {
