--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^3.4.3",
+    "reactstrap": "^8.5.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "uploadcare": "^0.4.5",
