--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^7.1.3",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
+    "react-s-alert": "^1.4.1",
     "react-scripts": "^3.4.3",
     "reactstrap": "^8.5.1",
     "redux": "^4.0.1",
